# RetriEval

./: .gitignore  Cargo.toml  README.md
docker/: qdrant.yml  redis.yml  weaviate.yml
scripts/: download_cohere.rs  download_molecules.rs  plot.py
src/: bench.rs  cuvs.rs  dataset.rs  docker.rs  error.rs  eval.rs  faiss.rs  generate.rs  lancedb.rs  output.rs  packed_distance.rs  perf_counters.rs  qdrant.rs  redis.rs  usearch.rs  weaviate.rs
