[package]
name = "retrieval"
version = "0.1.0"
edition = "2021"
description = "RetriEval — benchmark suite for vector search engines"

[lib]
name = "retrieval"
path = "src/bench.rs"

[[bin]]
name = "retri-eval-usearch"
path = "src/usearch.rs"
required-features = ["usearch-backend"]

[[bin]]
name = "retri-eval-faiss"
path = "src/faiss.rs"
required-features = ["faiss-backend"]

[[bin]]
name = "retri-eval-qdrant"
path = "src/qdrant.rs"
required-features = ["qdrant-backend"]

[[bin]]
name = "retri-eval-redis"
path = "src/redis.rs"
required-features = ["redis-backend"]

[[bin]]
name = "retri-eval-lancedb"
path = "src/lancedb.rs"
required-features = ["lancedb-backend"]

[[bin]]
name = "retri-eval-weaviate"
path = "src/weaviate.rs"
required-features = ["weaviate-backend"]

[[bin]]
name = "retri-eval-cuvs"
path = "src/cuvs.rs"
required-features = ["cuvs-backend"]

[[bin]]
name = "retri-generate"
path = "src/generate.rs"
required-features = ["generate"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
sysinfo = "0.38"
indicatif = "0.18"
rand = "0.9"

# USearch backend
usearch = { git = "https://github.com/unum-cloud/usearch.git", branch = "main-dev", optional = true }
fork_union = { version = "2", optional = true }
itertools = { version = "0.14", optional = true }

# FAISS backend — use `faiss-static` feature to bundle FAISS from source,
# or plain `faiss-backend` to link against a pre-installed libfaiss_c.
faiss = { version = "0.13", optional = true }

# Tier 2 shared (Docker + async)
bollard = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", optional = true }

# Qdrant
qdrant-client = { version = "1", optional = true }

# Redis
redis = { version = "0.27", features = ["tokio-comp"], optional = true }

# LanceDB
lancedb = { version = "0.27", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

# Weaviate
weaviate-community = { version = "0.2", optional = true }

# cuVS
cuvs = { version = "26.4", optional = true }
cuvs-sys = { version = "26.4", optional = true }
numkong = { git = "https://github.com/unum-cloud/usearch.git", branch = "main-dev", optional = true }

[features]
default = ["usearch-backend"]
usearch-backend = ["usearch", "fork_union", "itertools"]
faiss-backend = ["faiss"]
faiss-static = ["faiss-backend", "faiss/static"]
tier2 = ["bollard", "futures-util", "tokio", "reqwest"]
qdrant-backend = ["tier2", "qdrant-client"]
redis-backend = ["tier2", "redis"]
lancedb-backend = ["tier2", "lancedb", "arrow-array", "arrow-schema"]
weaviate-backend = ["tier2", "weaviate-community"]
cuvs-backend = ["cuvs", "cuvs-sys", "itertools", "numkong"]
generate = ["numkong"]
