[package]
name = "retrieval"
version = "0.1.0"
edition = "2021"
description = "RetriEval — benchmark suite for vector search engines"

[lib]
name = "retrieval"
path = "src/bench.rs"

[[bin]]
name = "retri-eval-usearch"
path = "src/usearch.rs"
required-features = ["usearch-backend"]

[[bin]]
name = "retri-eval-faiss"
path = "src/faiss.rs"
required-features = ["faiss-backend"]

[[bin]]
name = "retri-eval-qdrant"
path = "src/qdrant.rs"
required-features = ["qdrant-backend"]

[[bin]]
name = "retri-eval-redis"
path = "src/redis.rs"
required-features = ["redis-backend"]

[[bin]]
name = "retri-eval-lancedb"
path = "src/lancedb.rs"
required-features = ["lancedb-backend"]

[[bin]]
name = "retri-eval-weaviate"
path = "src/weaviate.rs"
required-features = ["weaviate-backend"]

[[bin]]
name = "retri-eval-cuvs"
path = "src/cuvs.rs"
required-features = ["cuvs-backend"]

[[bin]]
name = "retri-generate"
path = "src/generate.rs"
required-features = ["generate"]

[[bin]]
name = "retri-download-molecules"
path = "scripts/download_molecules.rs"
required-features = ["download"]

[[bin]]
name = "retri-download-cohere"
path = "scripts/download_cohere.rs"
required-features = ["download"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
sysinfo = "0.38"
indicatif = "0.18"
rand = "0.9"
thiserror = "2"

# USearch backend
usearch = { git = "https://github.com/unum-cloud/usearch.git", branch = "main", optional = true }
fork_union = { version = "2" }
itertools = { version = "0.14", optional = true }

# FAISS backend — use `faiss-static` feature to bundle FAISS from source,
# or plain `faiss-backend` to link against a pre-installed libfaiss_c.
faiss = { version = "0.13", optional = true }

# Tier 2 shared (Docker + async). `numkong` is unconditionally enabled
# (not gated behind a feature) so `src/redis.rs` can route source → wire
# dtype conversions through `numkong::cast` for `FT.CREATE VECTOR TYPE`
# payloads (f16 / bf16 / u8 / i8) without a feature-flag scavenger hunt.
bollard = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", optional = true }

# Qdrant
qdrant-client = { version = "1", optional = true }

# Redis
redis = { version = "0.27", features = ["tokio-comp"], optional = true }

# LanceDB
lancedb = { version = "0.27", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

# Weaviate
weaviate-community = { version = "0.2", optional = true }

# cuVS
cuvs = { version = "26.4", optional = true }
cuvs-sys = { version = "26.4", optional = true }
numkong = { git = "https://github.com/unum-cloud/usearch.git", branch = "main", features = ["parallel"] }

# Dataset download binaries (Parquet readers for USearchMolecules / Cohere Wikipedia)
parquet = { version = "57", default-features = false, features = ["arrow", "snap", "lz4", "zstd", "brotli"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

# Linux-only: scoped hardware perf counters wired into StepEntry JSON output.
# Gated both by `cfg(target_os = "linux")` (so macOS/Windows builds skip the
# dep entirely) and the `perf-counters` feature flag (opt-in).
[target.'cfg(target_os = "linux")'.dependencies]
perf-event2 = { version = "0.7", optional = true }

[features]
default = ["usearch-backend"]
usearch-backend = ["usearch", "itertools"]
faiss-backend = ["faiss"]
faiss-static = ["faiss-backend", "faiss/static"]
tier2 = ["bollard", "futures-util", "tokio", "reqwest", "reqwest/json"]
qdrant-backend = ["tier2", "qdrant-client"]
redis-backend = ["tier2", "redis"]
lancedb-backend = ["tier2", "lancedb", "arrow-array", "arrow-schema"]
weaviate-backend = ["tier2", "weaviate-community"]
cuvs-backend = ["cuvs", "cuvs-sys", "itertools"]
generate = []
download = ["parquet", "arrow-array", "arrow-schema", "reqwest", "reqwest/json", "reqwest/rustls-tls", "tokio", "futures", "bytes"]
perf-counters = ["dep:perf-event2"]
